--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -102,21 +102,20 @@
     <p>Transforming lives through guidance, motivation, and strategy.</p>
   </section>
 
-<section id="contact" class="content">
-    <h2>Contact Coach Bukky</h2>
-    <p>WhatsApp: <a href="https://chat.whatsapp.com/FgZ4kKjvo0e4Ycl6uaMO18">WhatsApp</a></p>
-    <p>Telegram: <a href="https://t.me/+oXlQcKuo8_o1YjJk">Telegram</a></p>
-  </section>
-
   <section id="about" class="content">
     <h2>About Coach Bukky</h2>
-     <video controls>
-        <source src="WhatsApp Video 2025-09-13 at 11.57.45_66a3a757.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-      </video>
     <p>Coach Bukky is dedicated to helping individuals unlock their full potential. 
        With years of experience, personalized coaching, and motivational strategies, 
        Coach Bukky ensures every client achieves lasting success.</p>
+  </section>
+
+  <!-- 🔹 Video moved here, just below About -->
+  <section id="intro-video" class="content">
+    <h2>Introduction Video</h2>
+    <video controls>
+      <source src="WhatsApp Video 2025-09-13 at 11.57.45_66a3a757.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
   </section>
 
   <section id="gallery" class="content">
