--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
   <section id="video">
     <h2>🎥 Introduction Video</h2>
     <video controls>
+      <video controls poster="WhatsApp Video 2025-09-13 at 11.57.45_66a3a757.mp4 - VLC media player 9_13_2025 9_58_59 PM.png">
       <source src="WhatsApp Video 2025-09-13 at 11.57.45_66a3a757.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
@@ -126,3 +127,4 @@
   </footer>
 </body>
 </html>
+
