--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       text-align: center;
     }
     nav {
-      background: #142a5c; /* Slightly lighter dark blue */
+      background: #0a0a23; /* Slightly lighter dark blue */
     }
     nav ul {
       list-style: none;
@@ -145,3 +145,4 @@
   </footer>
 </body>
 </html>
+
