--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </p>💸 Get Paid to Play – Learn the secrets to turning your gaming skills into a steady income stream.<p>
 
       🎮 Start Today, Play Anytime – Flexible, fun, and 100% online. Your next paycheck could come from your next game session!</p>
-      <a href="https://chat.whatsapp.com/CBYoAbho5An2iRIi2Ouimi" class="btn" target="_blank">Join Us On WHATSAPP</a>
+      <a href="https://chat.whatsapp.com/Jp2hjlwMyNO4WFi8MdrwC3?mode=wwt" class="btn" target="_blank">Join Us On WHATSAPP</a>
 <a href="https://t.me/+oXlQcKuo8_o1YjJk" class="btn" target="_blank">Join Us On TELEGRAM</a>
 
     </div>
@@ -78,6 +78,7 @@ Her step-by-step methods are easy to follow, even for beginners.
   </footer>
 </body>
 </html>
+
 
 
 
